--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,10 @@ body, ul {
     margin: 0;
     padding : 0;
 }
+
+.chapter {
+    width: 100%;
+    background-color: rgb(201, 212, 226);
+    margin-bottom: 1rem;
+    padding: 1rem 2rem;
+}
