services : mise en place burgers services

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
             <a routerLink="/bases">Bases</a>
         </li>
         <li>
-            <a routerLink="/services">Services</a>
+            <a routerLink="/services">Services et Formulaires</a>
         </li>
         <li>
             <a routerLink="/observables">Observables</a>
