--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,1 +1,4 @@
-<p>services works!</p>
+<h1>Les services</h1>
+<div class="chapter">
+    <img src="/assets/images/schemaServices.PNG" alt="">
+</div>
