--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -1,3 +1,50 @@
 img {
     width: 70%;
 }
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.burger-card {
+    width: 25%;
+    background-color: lightgoldenrodyellow;
+    border-radius: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+
+    img {
+        width: 70%;
+    }
+
+    .buttons {
+        width: 80%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .available {
+        background-color: rgba(0, 0, 0, 0.65);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top : 0;
+        left: 0;
+        border-radius: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color : white;
+    }
+
+    button {
+        padding: 0.5rem 0.5rem;
+        background-color: lightsalmon;
+        border-radius: 0.5rem;
+        border : none;
+    }
+}
