services : detail burgers

--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -14,7 +14,7 @@
             <img [src]="burger.picture" [alt]="burger.name">
             <p>{{ burger.price }}€</p>
             <div class="buttons">
-                <button>Détail 🔎</button>
+                <button routerLink="/burgers/{{burger.id}}">Détail 🔎</button>
                 <button>Éditer 📝</button>
                 <button>Supprimer ❌</button>
             </div>
