services : update burger

--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -15,7 +15,7 @@
             <p>{{ burger.price }}€</p>
             <div class="buttons">
                 <button routerLink="/burgers/{{burger.id}}">Détail 🔎</button>
-                <button>Éditer 📝</button>
+                <button routerLink="/burgers/edit/{{burger.id}}">Éditer 📝</button>
                 <button>Supprimer ❌</button>
             </div>
         </div>
