--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -25,6 +25,7 @@ img {
         width: 80%;
         display: flex;
         justify-content: space-evenly;
+        z-index: 10;
     }
 
     .available {
