--- a/src/app/observables/observables.component.html
+++ b/src/app/observables/observables.component.html
@@ -1,4 +1,5 @@
-<div class="card-container">
+<div class="card-container" *ngIf="burgers$ | async as burgers; else loading" >
+  <p *ngIf="lastReception">dernière reception: {{lastReception | date: 'HH:mm'}}</p>
   <div class="burger-card" *ngFor="let burger of burgers">
     <div *ngIf="!burger.available" class="available">Indisponible</div>
     <h2>{{burger.name}}</h2>
@@ -6,3 +7,7 @@
     <p>{{ burger.price }}€</p>
   </div>
 </div>
+
+<ng-template #loading>
+  <p>loading...</p>
+</ng-template>
