--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,5 +9,8 @@
         <li>
             <a routerLink="/observables">Observables</a>
         </li>
+        <li>
+          <a routerLink="/obs/thermometre">BehaviorSubject</a>
+        </li>
     </ul>
 </nav>
