--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,20 @@ body, ul {
     margin-bottom: 1rem;
     padding: 1rem 2rem;
 }
+
+.center {
+  text-align: center;
+}
+
+.bg-red {
+  background-color: red;
+  color: white;
+}
+
+.bg-gray {
+  background-color: gray;
+}
+
+.bg-blue {
+  background-color: lightblue;
+}
