--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 nav {
     height: 10vh;
     width: 100vw;
-    background-color: lightgray;
+    //background-color: lightgray;
     display: flex;
     justify-content: center;
     align-items: center;
