--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,5 +12,8 @@
         <li>
           <a routerLink="/obs/thermometre">BehaviorSubject</a>
         </li>
+        <li>
+          <a routerLink="/obs/panier">Panier ({{total | currency:'EUR'}})</a>
+        </li>
     </ul>
 </nav>
